--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,16 +1,15 @@
 ---
 const navItems = [
-  { path: "", label: "About" },
-  { path: "projects", label: "Projects" },
-  { path: "cv", label: "CV" },
-  { path: "fieldwork", label: "Fieldwork" },
-  { path: "software", label: "Software" },
-  { path: "teaching", label: "Teaching" },
-  { path: "outreach", label: "Outreach" },
+  { path: "/", label: "About" },
+  { path: "/projects", label: "Projects" },
+  { path: "/cv", label: "CV" },
+  { path: "/fieldwork", label: "Fieldwork" },
+  { path: "/software", label: "Software" },
+  { path: "/teaching", label: "Teaching" },
+  { path: "/outreach", label: "Outreach" },
 ];
 
-const pathName = Astro.url.pathname;
-const currentPath = pathName.slice(1);
+const currentPath = Astro.url.pathname;
 ---
 
 <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
@@ -56,8 +55,8 @@ const currentPath = pathName.slice(1);
     {
       navItems.map(({ path, label }) => (
         <a
-          href={`/${path}`}
-          class={`-m-1.5 p-1.5 font-semibold text-gray-900 hover:text-talamau-brown ${currentPath === path ? "text-talamau-brown" : ""}`}
+          href={path}
+          class={`-m-1.5 p-1.5 font-semibold text-gray-900 hover:text-talamau-brown ${currentPath === path || currentPath === `${path}/` ? "text-talamau-brown" : ""}`}
         >
           {label}
         </a>
@@ -109,7 +108,7 @@ const currentPath = pathName.slice(1);
             {
               navItems.map(({ path, label }) => (
                 <a
-                  href={`/${path}`}
+                  href={path}
                   class={`-m-1.5 p-1.5 font-semibold text-gray-900 hover:text-talamau-brown ${currentPath === path ? "text-talamau-brown" : ""}`}
                 >
                   {label}
